<resources>
    <string name="app_name">PersonalA</string>
    <string name="rc">日程</string>
    <string name="jz">记账</string>
    <string name="lc">理财</string>
    <string name="grzx">我</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="textlogin_id">用户名</string>
    <string name="textlogin_password">密码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="text_loginbutton">登录</string>
    <string name="text_regbutton">注册</string>
    <string name="textreg_pwd">确认密码</string>

    <string-array name="sz">
        <item>收入</item>
        <item>支出</item>
    </string-array>


    <string-array name="qix">
        <item>3个月</item>
        <item>6个月</item>
        <item>1年</item>
        <item>2年</item>
        <item>3年</item>
        <item>5年</item>
    </string-array>
</resources>
