<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.zucc.yxr31501359.Activity.LoginActivity"
              android:orientation="vertical">

    <ImageView
            android:id="@+id/login_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/users"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"/>

    <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:paddingLeft="8dp"
            android:background="@color/colorLoginEditText"
            android:hint="@string/textlogin_id"/>
    <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingLeft="8dp"
            android:background="@color/colorLoginEditText"
            android:hint="@string/textlogin_password"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_margin="10dp">

        <CheckBox
                android:id="@+id/login_rememberpassword"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:text="@string/rememberpassword"/>
        <CheckBox
                android:id="@+id/login_autologin"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:text="@string/autologin"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:gravity="center">

        <Button
                android:id="@+id/login_button"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@drawable/shape"
                android:text="@string/text_loginbutton"
                android:textSize="20dp"
                android:textColor="@color/colorlogin_text"/>
        <Button
                android:id="@+id/reg_button"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_toRightOf="@id/login_button"
                android:layout_marginLeft="50dp"
                android:background="@drawable/shape"
                android:text="@string/text_regbutton"
                android:textSize="20dp"
                android:textColor="@color/colorlogin_text"/>
    </RelativeLayout>


</LinearLayout>