<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.zucc.yxr31501359.Activity.LoginActivity"
              android:orientation="vertical">

    <ImageView
            android:id="@+id/login_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/users"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"/>

    <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:paddingLeft="8dp"
            android:background="@color/colorLoginEditText"
            android:hint="@string/textlogin_id"/>
    <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingLeft="8dp"
            android:background="@color/colorLoginEditText"
            android:hint="@string/textlogin_password"/>
    <EditText
            android:id="@+id/reg_rePwd"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:paddingLeft="8dp"
            android:background="@color/colorLoginEditText"
            android:hint="@string/textreg_pwd"/>

    <Button
            android:id="@+id/reg_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape"
            android:text="@string/text_regbutton"
            android:textSize="20dp"
            android:textColor="@color/colorlogin_text"/>


</LinearLayout>